--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
             </div>        
         </div>
 	<!-- JQuery -->
-	<script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<!-- My Javascript -->
 	<script type="text/javascript" src="script.js"></script>
 	</body>
