working on getting the comments to render in the dom

--- a/public/index.html
+++ b/public/index.html
@@ -34,14 +34,13 @@
 				<a id="link" class="text-center"> </a>
 			</h1>
 			<p id="summary" class="text-center"> </p>
-			<div class="container">
-				<button id="commentBox" class="jumbo-buttons"> Comment </button>
-			</div>	
+			<div>
+				<p id="articleComments"></p>
+			</div>
+			<button id="commentBox" class="jumbo-buttons"> Comment </button>
 		</div><!-- Article -->  
 		<div id="comments" class="comment-box">   
            	<h1 class="text-center comment-title">Comments</h1>
-            <div id="articleComments">                		
-            </div>	
             <h3 class="text-center">Add a Comment!</h3>
             <div class="form-group">
                 <label for="commentText">Comment:</label>
