--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 		<div class="jumbotron jumbotron-fluid">
 		  <div class="container">
 		    <h1 class="jumbo-text jumbo-header">News Scraper</h1>
-		    <p class="jumbo-text jumbo-paragraph">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+		    <p class="jumbo-text jumbo-paragraph"> Scrape the most current articles from the New York times. Leave a comment if you'd like! </p>
 		     <button id="scrapeArticles" class="jumbo-buttons"> Scrape Articles </button>
 		      <button id="getArticles" class="jumbo-buttons"> Load Articles </button>
 		  </div>
@@ -34,10 +34,14 @@
 				<a id="link" class="text-center"> </a>
 			</h1>
 			<p id="summary" class="text-center"> </p>
-			<div>
-				<p id="articleComments"></p>
+
+			<div class="container" id="commentSection">
+				<h3 class="text-center" id="commentHeader"> Previous Comments </h3>
+				<button class="small-button" id="deleteComment"> Delete Comment </button>
 			</div>
-			<button id="commentBox" class="jumbo-buttons"> Comment </button>
+			<div class="container">
+				<button id="commentShowButton" class="comment-show-button"> Comment </button>
+			</div>	
 		</div><!-- Article -->  
 		<div id="comments" class="comment-box">   
            	<h1 class="text-center comment-title">Comments</h1>
