added screenshots to readme

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
             </div>
             <button id="addComment" class="btn small-button ">Add / Edit</button>
         </div><!-- Comments -->   
-		<div class="panel-footer">
+		<div class="panel-footer footer">
             <div id="navigation">
             </div>        
         </div>
